# neurath

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmark/: README.md  runner.py
docs/: architecture.d2
examples/: basic_revision.py
scripts/: manual_release_followup.sh
src/neurath/: __init__.py
src/neurath/introspect/: __init__.py  api.py
src/neurath/llm/: __init__.py  adapter.py  prompts.py
src/neurath/revision/: __init__.py  planner.py
src/neurath/store/: __init__.py  belief.py  history.py  truth.py
tests/: test_adapter.py  test_belief.py  test_introspect.py  test_revision.py  test_truth.py
